--- a/src/Alturos.Yolo/Alturos.Yolo.csproj
+++ b/src/Alturos.Yolo/Alturos.Yolo.csproj
@@ -9,13 +9,13 @@
     <PackageReleaseNotes>.netstandard 2.0 support, add linux support, optimize folder structure</PackageReleaseNotes>
     <PackageIconUrl>https://raw.githubusercontent.com/AlturosDestinations/Alturos.Yolo/master/doc/logo.png</PackageIconUrl>
     <PackageIcon>logo.png</PackageIcon>
-    <PackageProjectUrl>https://github.com/AlturosDestinations/Alturos.Yolo</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/AlturosDestinations/Alturos.Yolo</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/S19005812/Alturos.Yolo</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/S19005812/Alturos.Yolo</RepositoryUrl>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>3.0.6-alpha</Version>
-    <AssemblyVersion>3.0.6</AssemblyVersion>
-    <FileVersion>3.0.6</FileVersion>
+    <Version>3.0.7-alpha</Version>
+    <AssemblyVersion>3.0.7</AssemblyVersion>
+    <FileVersion>3.0.7</FileVersion>
   </PropertyGroup>
 
   <!-- Only for .netstandard 2.0 -->
